syntax = "proto3";

option go_package = "apollo/proto1";

package proto1;

message Resource {
  string id = 1;
  string kind = 2;
}

message AttributeId {
  string name = 1;
}

message Attribute {
  AttributeId id = 1;
  enum AttributeKind {
    INT64 = 0;
    FLOAT64 = 1;
    STRING = 2;
    BOOL = 3;
  }
  AttributeKind kind = 2;
  bytes value = 3;
}

message User {
  string id = 1;
  string name = 2;
  string surname = 3;
  string email = 4;
  string password = 5;
  string org = 6;
  string username = 7;
}

message RegisteredUser {
  string id = 1;
  string name = 2;
  string surname = 3;
  string email = 4;
  string org = 5;
  string username = 6;
}

message Token {
  string token = 1;
}

message Org {
  string id = 1;
  string name = 2;
}

message Permission {
  string id = 1;
  string name = 2;
}